--- a/resources/build.properties
+++ b/resources/build.properties
@@ -1,127 +1,187 @@
-# Create libraries for the open source programming language 
-# and environment processing (http://www.processing.org)
+# Create libraries for the Processing open source programming language and 
+# environment (http://www.processing.org)
 #
-# Customize the build properties to make the ant-build-process
-# work for your environment. How? Please read the comments below.
+# Customize the build properties to make the ant-build-process work for your 
+# environment. How? Please read the comments below.
 #
-# The default properties are set for OSX, for Windows-settings
-# please refer to comments made under (1) and (2).
+# The default properties are set for OSX, for Windows-settings please refer to 
+# comments made under (1) and (2).
 
 
 
 # (1) 
-# Where is your processing sketchbook located? 
-# If you are not sure, check the sketchbook location in your
-# processing application preferences.
-# ${user.home} points the compiler to your home directory
+# Where is your Processing sketchbook located?
+# If you are not sure, check the sketchbook location in your Processing 
+# application preferences.
+# 
+# ${user.home} points the compiler to your home directory.
 # For windows the default path to your sketchbook would be
 # ${user.home}/My Documents/Processing (make adjustments below).
 
-sketchbook.location=${user.home}/Documents/Code/Processing
+sketchbook.location=${user.home}/Documents/Processing
 
 
 
 # (2) 
-# Where are the jar files located that are required for compiling 
-# your library such as e.g. core.jar?
-# by default the local classpath location points to folder libs
-# inside eclipse's workspace (by default found in your home directory).
-# For Windows the default path would be ${user.home}/workspace/libs
-# (make adjustments below)
+# Where are the core library files located that are required for compiling
+# your library such as e.g. core.jar or android-core.zip?
+# By default the local classpath location points to folder libs inside Eclipse's
+# workspace (by default found in your home directory).
+# For Windows the default path would be ${user.home}/workspace/libs (make 
+# adjustments below).
 
-classpath.local.location=${user.home}/Documents/Code/Processing\ libs/libs
-
+#classpath.local.location=${user.home}/Documents/workspace/libs
 
 
 # For OSX users. 
-# The following path will direct you into processing's 
-# application source code folder in case you put processing inside your
-# Applications folder. Uncommenting the line below will overwrite the 
-# classpath.local.location from above.
+# The following path will direct you into Processing's application source code 
+# folder in case you put Processing inside your Applications folder. 
+# Uncommenting the line below will overwrite the classpath.local.location from 
+# above.
 
-# classpath.local.location=/Applications/Processing.app/Contents/Resources/Java/
+classpath.local.location=/Applications/Processing.app/Contents/Resources/Java/modes/android/
 
 
-# Add all jar files that are required for compiling your project
-# to the local and project classpath, use a comma as delimiter.
-# These jar files must be inside your classpath.local.location folder.
+# Add the Processing Android Core file (android-core.zip) that is required for
+# compiling your project to the local and project classpath. This file must be
+# inside your classpath.local.location folder.
 
-classpath.local.include=core.jar, android.jar
+classpath.local.include=android-core.zip
+
+
+
+# Android Platform
+# The following paths point to the location of the version of android.jar
+# required to build your project. As of Processing 2.0a6, API Level 10 is the
+# minimum version, but your library may require a higher level if it includes
+# newer features like NFC or Wi-Fi direct.
+
+# android_platform.location is dependent on where you installed the Android SDK
+
+android_platform.location=${user.home}/android-sdk-macosx/platforms/android-10/
+
+# android_platform.include will probably always be android.jar
+
+android_platform.include=android.jar
 
 
 # Add processing's libraries folder to the classpath.
-# If you don't need to include the libraries folder to your classpath,
-# comment out the following line.
+# If you don't need to include any installed libraries in the classpath, change
+# change this to a path that does not exist (but note that it will be created
+# during the build).
 
 classpath.libraries.location=${sketchbook.location}/libraries
 
 
 
-# (3) set the java version that should be used to compile your library.
+# (3)
+# Set the java version that should be used to compile your library.
 
 java.target.version=1.6
 
 
-# set the description of the ant build.xml file
+# Set the description of the Ant build.xml file.
 
-ant.description=processingLibs. ant build file.
+#jra ant.description=ProcessingLibs Ant build file.
+ant.description=BtSerial Ant build file.
 
 
 
 # (4)
-# project details.
+# Project details.
 # Give your library a name.
 
-project.name=btserial
+project.name=BtSerial
 
 
-# use normal or fast as value for project.compile 
-# (fast will only compile the project into your sketchbook, 
-# using normal as property will compile the distribution including the 
-# javadoc-reference and all web-files - the compile process here
-# takes longer)
+# Use 'normal' or 'fast' as value for project.compile.
+# 'fast' will only compile the project into your sketchbook.
+# 'normal' will compile the distribution including the javadoc-reference and all
+# web-files (the compile process here takes longer).
 
 project.compile=normal
 
-# all files compiled with project.compile=normal are stored 
-# in folder distribution
+# All files compiled with project.compile=normal are stored 
+# in the distribution folder.
 
 
 
 # (5)
-# the following items are properties that will be used to 
-# make changes to the html document template. values of properties 
-# will be implemented ito the document automatically.
+# The following items are properties that will be used to make changes to the 
+# web document templates. Values of properties will be inserted into the 
+# documents automatically.
+# If you need more control, you can edit web/index.html and
+# web/library.properties directly.
 
-# set the current version of your project. 
+author.name=David Cuartielles, Andreas Goransson, Tom Igoe, Joshua Albers
+author.url=http://github.com/joshuaalbers/BtSerial
 
-project.version=0.1.6
-project.copyright=(c) 2011
-project.dependencies=?
-project.keywords=processing, android, bluetooth
 
-author.name=Andreas Göransson & David Cuartielles & Tom Igoe
-author.url=http://www.arduino.com
+# Set the web page for your library.
+# This is NOT a direct link to where to download it.
 
-tested.platform=Android 2.1, Android 2.3.3
-tested.processingversion=1.5.1
+library.url=http://github.com/joshuaalbers/BtSerial
 
+
+# Set the category of your library. This must be one (or many) of the following:
+#   "3D"            "Animation"     "Compilations"      "Data"          
+#   "Fabrication"   "Geometry"      "GUI"               "Hardware"      
+#   "I/O"           "Language"      "Math"              "Simulation"    
+#   "Sound"         "Utilities"     "Typography"        "Video & Vision"  
+# If a value other than those listed is used, your library will listed as 
+# "Other".
+
+library.category=Hardware
+
+
+# A short sentence (or fragment) to summarize the library's function. This will 
+# be shown from inside the PDE when the library is being installed. Avoid 
+# repeating the name of your library here. Also, avoid saying anything redundant 
+# like mentioning that it's a library. This should start with a capitalized 
+# letter, and end with a period.
+
+library.sentence=Streamlining serial Bluetooth connections on Android devices.
+
+
+# Additional information suitable for the Processing website. The value of
+# 'sentence' always will be prepended, so you should start by writing the
+# second sentence here. If your library only works on certain operating systems,
+# mention it here.
+
+library.paragraph= 
+
+
+# Set the source code repository for your project.
+# Recommendations for storing your source code online are Google Code or GitHub.
+
+source.host=Github
+source.url=https://github.com/joshuaalbers/BtSerial
+source.repository=https://github.com/joshuaalbers/BtSerial
+
+
+# The current version of your library. 
+# This number must be parsable as an int. It increments once with each release. 
+# This is used to compare different versions of the same library, and check if 
+# an update is available.
+
+library.version=2
+
+
+# The version as the user will see it. 
+# If blank, the library.version attribute will be used here.
+
+library.prettyVersion=0.2.0
+
+
+library.copyright=(C) 2012
+library.dependencies=?
+library.keywords=?
 
 tested.platform=osx,windows
-tested.processingversion=?
-
-# recommendations for storing your source code online are: code.google or github.
-
-source.host=github
-source.url=http://github.com/arduino/btserial/wiki
-source.repository=https://github.com/arduino/btserial
+tested.processingVersion=1.5
 
 
-# include javadoc references into your project's javadoc
+# Include javadoc references into your project's javadocs.
 
-javadoc.java.href=
-#http://java.sun.com/javase/6/docs/api/
-javadoc.processing.href=
-#http://dev.processing.org/reference/everything/javadoc/
-
-
+javadoc.java.href=http://java.sun.com/javase/6/docs/api/
+javadoc.processing.href=http://processing.googlecode.com/svn/trunk/processing/build/javadoc/core/
